[package]
name = "num_convert"
version = "0.5.1"
edition = "2021"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/num_convert"
homepage = "https://github.com/pic16f877ccs/num_convert"
license = "GPL-3.0-or-later"
description = "Type converting library, conversions integers by overflow addition, \nsupports generics types."
keywords = ["trait", "generic", "any-converting", "integers", "overflow-addition"]
categories = ["algorithms"]

[dependencies]
paste = "1.0.8"
#tuple_macro = { version = "0.2.1", git = "https://github.com/pic16f877ccs/tuple_tool" }
tuple_macro = { version = "0.2.1", path = "/home/sandumars/Projects/RustLang/Crates/tuple_tool/tuple_macro" }

[features]
to_min = []
to_max = []
to_zero = []
bits = []
cast_from_as = []
cast_into_as = []
type_info = []
val_type_info = []
default = ["to_min","to_zero", "to_max", "bits"]
8 = ["tuple_macro/from_tup_8"]
16 = ["tuple_macro/from_tup_16"]
32 = ["tuple_macro/from_tup_32"]
64 = ["tuple_macro/from_tup_64"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
