[package]
name = "num_convert"
version = "0.6.0"
edition = "2021"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/num_convert"
homepage = "https://github.com/pic16f877ccs/num_convert"
license = "GPL-3.0-or-later"
description = "Type converting library, conversions integers by overflow addition, \nsupports generics types."
keywords = ["trait", "generic", "any-converting", "integers", "overflow-addition"]
categories = ["algorithms"]

[dependencies]
paste = "1.0.8"
from_tup_macro = { version = "0.1.0" }
try_tup_to_arr_macro = { version = "0.1.0" }

[features]
to_min = []
to_max = []
to_zero = []
bits = []
cast_from_as = []
cast_into_as = []
try_from_int_str = []
type_info = []
val_type_info = []
tup8 = ["from_tup_macro/from_tup_8"]
tup16 = ["from_tup_macro/from_tup_16"]
default = ["to_min","to_zero", "to_max", "bits"]
try_tup_to_arr8 = ["try_tup_to_arr_macro/try_tup_to_arr_8"]
try_tup_to_arr16 = ["try_tup_to_arr_macro/try_tup_to_arr_16"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
